[gd_scene load_steps=5 format=3 uid="uid://co2ju0gpm5s0a"]

[ext_resource type="Script" uid="uid://bwsu7iko7f6ye" path="res://addons/behavior/screen/create_new.gd" id="1_0ihcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ihcn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.6)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pa5ea"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.3)
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvtw3"]

[node name="NewResource" type="CenterContainer"]
script = ExtResource("1_0ihcn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Open a Behavior resource, or create a new one."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="TypeSelection" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "Select Type"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Mind"
popup/item_1/id = 1
popup/item_2/text = "Sense"
popup/item_2/id = 2
popup/item_3/text = "Goal"
popup/item_3/id = 3

[node name="VariantSelection" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
flat = true
selected = 0
item_count = 1
popup/item_0/text = "Select Variant"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0ihcn")
theme_override_styles/read_only = SubResource("StyleBoxFlat_pa5ea")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvtw3")
editable = false
clear_button_enabled = true

[node name="Create" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
action_mode = 0
text = "Create"
